syntax = "proto3";

package middlewares;

import "github.com/TuneLab/go-truss/deftree/googlethirdparty/annotations.proto";

service MiddlewaresTest {
  // Test endpoints.WrapAllExcept(middleware, exclude ...)
  // AlwaysWrapped will never be excluded in endpoints.WrapAllExcept
  rpc AlwaysWrapped (Empty) returns (WrapAllExceptTest) {
    option (google.api.http) = {
      get: "/alwayswrapped"
    };
  }
  // SometimesWrapped will be excluded from the middleware that set the
  // NotSometimes value
  rpc SometimesWrapped (Empty) returns (WrapAllExceptTest) {
    option (google.api.http) = {
      get: "/sometimeswrapped"
    };
  }
}

message Empty {}

// WrapAllExceptTest will be populated by middlewares which were wrapped
// around endpoints using WrapAllExcept
message WrapAllExceptTest {
  // Always will be set to true
  bool Always = 1;
  // NotSometimes will be set to true for endpoint AlwaysWrapped and set to
  // false for SometimesWrapped
  bool NotSometimes = 2;
}
